# Game_maze_Asterix-Obelix

./: .gitignore  AllegroLink.c  Button.c  CMakeLists.txt  CPL.bat  Gc.c  Gc.h  Global.h  MainMatth.c  MainMouv.c  MainMouv.h  Menu.c  Menu.h  Part.c  Part.h  Party.c  Path.h  Plateau.c  Player.c  Player.h  README.md  SAVE_0  SAVE_1  SAVE_2  SAVE_3  SAVE_4  fonction.h  fonction1.h  fonction_t.c  fonction_t.h  main.c  main1.c  main_t.c  test_allegro_libs.c  utils.c
ALLEGRO/: Allegro_Main.c  Gc.c  MainMatth.c  Menu.h  fonction_t.c  fonction_t.h
ALLEGRO/.c/: Allegro_Main.c  Button.c  Gc.c  MainMatth.c  Menu.c  Part.c  Party.c  PathFinding.c  Plateau.c  Player.c  SaveManager.c  fonction_t.c  main.c  utils.c
ALLEGRO/.h/: Button.h  Gc.h  Global.h  Menu.h  Part.h  Party.h  Path.h  PathFinding.h  Plateau.h  Player.h  SaveManager.h  fonction_t.h  utils.h
ALLEGRO/c/: Part.c  Plateau.c
ALLEGRO/h/: Button.h  fonction_t.h
AllegroEngine/: AlMain.c  AlMain.h  Image.c  Image.h
Console/: fonction.h  main.c  main1.c
